# napari-EMD

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_emd/: __init__.py  _reader.py  _widget.py  napari.yaml
src/napari_emd/_tests/: test_reader.py  test_widget.py
src/napari_emd/_tests/test_data/: metadata.py
